attempt mobile web menu spacing fix

--- a/src/app/modules/side-menu/components/side-menu.component.scss
+++ b/src/app/modules/side-menu/components/side-menu.component.scss
@@ -47,3 +47,7 @@ ion-list {
   max-height: 100vh;
   overflow: auto;
 }
+
+.mobilePadding {
+  padding-bottom: 6em;
+}
